--- a/assets/css/ingredients.css
+++ b/assets/css/ingredients.css
@@ -1,3 +1,8 @@
+/* Theme overrides */
+.first-entry {
+  min-height: auto;
+}
+
 /* Recipe info wrapper */
 .recipe-info-wrapper {
   display: flex;
