--- a/assets/css/ingredients.css
+++ b/assets/css/ingredients.css
@@ -777,7 +777,7 @@
 
   .price-info {
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 0.1rem;
   }
 
