--- a/layouts/shortcodes/option.html
+++ b/layouts/shortcodes/option.html
@@ -29,7 +29,7 @@
   data-unit="{{ $unit }}"
   data-name="{{ $name }}"
   data-plural="{{ $plural }}"
-  {{ if $posthof }}data-posthof="{{ $posthof }}"{{ end }}
+  {{ if $posthof }}data-posthof="{{ $posthof | jsonify }}"{{ end }}
   {{ if $price }}data-price="{{ $price }}"{{ end }}
   {{ if $altUnits }}data-alt-units="{{ $altUnits | jsonify }}"{{ end }}
   {{ if eq $default "true" }}selected{{ end }}>
